[no-pt-story] add proxy server between frontend and backend
