# backend/src/app.py
@@ -21,7 +21,7 @@ class AgentResponse(BaseModel):
   system_prompt: str
 
 
-@app.post("/agents", status_code=status.HTTP_201_CREATED)
+@app.post("/api/agents", status_code=status.HTTP_201_CREATED)
 async def create_agent(request: PostAgentRequest, db: AsyncSession = Depends(get_session)) -> AgentResponse:
   random_id = uuid.uuid4()
   db.add(AgentModel(id=str(random_id), name=request.name, system_prompt=request.system_prompt))
@@ -29,7 +29,7 @@ async def create_agent(request: PostAgentRequest, db: AsyncSession = Depends(get
   return AgentResponse(id=random_id, name=request.name, system_prompt=request.system_prompt)
 
 
-@app.get("/agents", status_code=status.HTTP_200_OK)
+@app.get("/api/agents", status_code=status.HTTP_200_OK)
 async def get_agents(db: AsyncSession = Depends(get_session)) -> list[AgentResponse]:
   select_stmt = select(AgentModel)
   result = await db.execute(select_stmt)
